--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <body>
     <h1>Welcome to Github Classroom!</h1>
-    <div>My name is YOUR NAME HERE</div>
+    <div>franck KONE</div>
     <!-- Your html here -->
   </body>
 </html>
