Adding a dog image in my project directory and then in my html file

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <body>
     <h1>Welcome to Github Classroom!</h1>
     <div>franck KONE</div>
+    <img src="dog.avif" alt="dog.image">
     <!-- Your html here -->
   </body>
 </html>
